--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "pg": "^8.5.0"
   },
   "devDependencies": {
-    "mocha": "^8.2.1"
+    "chai":"*",
+    "mocha": "*"
   },
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha"
