--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "app.js",
   "dependencies": {
     "chai": "^4.2.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "http": "^0.0.1-security",
     "pg": "^8.5.0"
   },
   "devDependencies": {
-    "chai":"*",
+    "chai": "*",
     "mocha": "*"
   },
   "scripts": {
