--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "http": "^0.0.1-security",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.5.0"
   },
   "devDependencies": {
