--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "mocha": "*"
   },
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha"
+    "test": "./node_modules/mocha/bin/mocha",
+    "docker_build": "./docker.sh build",
+    "docker_push": "./docker.sh push",
+    "deploy": "./gke/gke.sh deploy"
   },
   "repository": {
     "type": "git",
